--- a/TDSTecnologia.Site.Web/Views/Home/_Layout.cshtml
+++ b/TDSTecnologia.Site.Web/Views/Home/_Layout.cshtml
@@ -7,6 +7,7 @@
     <title>@ViewBag.Title</title>
 
     <link href="~/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/site/main.css" rel="stylesheet" />
 </head>
 <body>
     <div>
@@ -32,6 +33,12 @@
         </header>
         @RenderBody()
     </div>
+
+    <footer class="border-top text-muted footer">
+        <div class="container">
+            &copy; 2019 - TDS Tecnologia
+        </div>
+    </footer>
 
     <script src="~/jquery/jquery.min.js"></script>
     <script src="~/twitter-bootstrap/js/bootstrap.min.js"></script>
