--- a/TDSTecnologia.Site.Web/Views/Home/_Layout.cshtml
+++ b/TDSTecnologia.Site.Web/Views/Home/_Layout.cshtml
@@ -31,7 +31,11 @@
                 </div>
             </nav>
         </header>
-        @RenderBody()
+        <div class="container">
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
+        </div>
     </div>
 
     <footer class="border-top text-muted footer">
