--- a/TDSTecnologia.Site.Web/Views/Home/Novo.cshtml
+++ b/TDSTecnologia.Site.Web/Views/Home/Novo.cshtml
@@ -10,8 +10,13 @@
 <hr />
 <div class="row">
     <div class="col-md-8 offset-2">
-        <form asp-action="Novo">
+        <form asp-action="Novo" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div class="form-group">
+                <label for="arquivo" class="control-label"></label>
+                <input type="file" class="btn btn-primary" name="arquivo" id="arquivo" />
+            </div>
 
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
