--- a/TDSTecnologia.Site.Web/Views/Home/Novo.cshtml
+++ b/TDSTecnologia.Site.Web/Views/Home/Novo.cshtml
@@ -14,8 +14,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
+                <img src="#" name="arquivo" id="arquivo" height="300" width="300" class="border border-secondary rounded" style="display: none;" />
+            </div>
+
+            <div class="form-group">
                 <label for="arquivo" class="control-label"></label>
-                <input type="file" class="btn btn-primary" name="arquivo" id="arquivo" />
+                <input type="file" class="btn btn-primary" name="arquivo" id="arquivo" onchange="CarregarImagem(this)" />
             </div>
 
             <div class="form-group">
@@ -47,3 +51,18 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+    <script>
+        function CarregarImagem(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    $("#arquivo" ).show();
+                    $("#arquivo").attr('src', e.target.result).width(300).height(300);
+                }
+            }
+            reader.readAsDataURL(input.files[0]);
+        }
+    </script>
+}
