--- a/TDSTecnologia.Site.Web/Views/Home/_Layout.cshtml
+++ b/TDSTecnologia.Site.Web/Views/Home/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Início</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Novo">Novo</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -46,5 +49,6 @@
 
     <script src="~/jquery/jquery.min.js"></script>
     <script src="~/twitter-bootstrap/js/bootstrap.min.js"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
