--- a/TDSTecnologia.Site.Web/Views/Home/_Layout.cshtml
+++ b/TDSTecnologia.Site.Web/Views/Home/_Layout.cshtml
@@ -15,6 +15,7 @@
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 fixed-top">
                 <div class="container">
                     <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                        <img src="~/imagens/logo-tds.png" width="60" height="30" alt="" /> 
                         TDS Tecnologia
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -36,6 +37,15 @@
         </header>
         <div class="container">
             <main role="main" class="pb-3">
+                <div class="jumbotron" style="background-image: url('/imagens/banner.jpg');">
+                    <h1 class="display-4">O que você gostaria de aprender?</h1>
+                    <p class="lead text-primary">Vendemos o conhecimento, independente da tecnologia.</p>
+                    <hr class="my-4">
+                    <p class="text-info">Veja aqui nossos proximos cursos agendados, se preferir acesso nosso Calendário completo.</p>
+                    <p class="lead">
+                        <a class="btn btn-primary btn-sm" href="#" role="button">Veja mais</a>
+                    </p>
+                </div>
                 @RenderBody()
             </main>
         </div>
