--- a/TDSTecnologia.Site.Web/Views/Home/Detalhes.cshtml
+++ b/TDSTecnologia.Site.Web/Views/Home/Detalhes.cshtml
@@ -24,11 +24,33 @@
             @Html.DisplayFor(model => model.QuantidadeAula)
         </dd>
         <dt class="col-sm-2">
-            Início
+            Data de inicio
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DataInicio)
         </dd>
+        <dt class="col-sm-2">
+            Modalidade
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Modalidade)
+        </dd>
+        <dt class="col-sm-2">
+            Nº de Vagas
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Vagas)
+        </dd>
+        <dt class="col-sm-2">
+            Nível
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Nivel)
+        </dd>
+
+        <dt class="col-sm-2">
+            Início
+        </dt>
     </dl>
 </div>
 <div>
