--- a/TDSTecnologia.Site.Web/Views/Shared/_Layout.cshtml
+++ b/TDSTecnologia.Site.Web/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <title>@ViewBag.Title</title>
 
     <link href="~/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" />
     <link href="~/site/main.css" rel="stylesheet" />
 </head>
 <body>
@@ -29,6 +30,9 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Novo">Novo</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Permissao" asp-action="Index">Permissões</a>
                             </li>
                         </ul>
                     </div>
