Opção de alterar a permissão.

--- a/TDSTecnologia.Site.Web/Views/Shared/_Layout.cshtml
+++ b/TDSTecnologia.Site.Web/Views/Shared/_Layout.cshtml
@@ -29,10 +29,10 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Início</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Novo">Novo</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Novo">Cadastro curso</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Permissao" asp-action="Index">Permissões</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Permissao" asp-action="Index">Cadastro Permissões</a>
                             </li>
                         </ul>
                     </div>
